# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([vish], [0.0.20121230], [Simon.Richter@hogyros.de])
AM_INIT_AUTOMAKE([1.10 foreign])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
AC_CHECK_LIB([visa], [viOpen])

# Checks for header files.
AC_CHECK_HEADER([visa.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
